# house_on_map

./: .gitignore  alembic.ini  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: a81c6f2ad53f_init.py  c08934c4db87_add_calculate_field.py  e9046a7e31bd_add_user_model.py  ffdb23f6379a_add_token_model.py
src/: .env_example  .env_test  main.py  settings.py
src/dependencies/: auth.py  database.py  mysql_db.py  oauth.py  pg_db.py  service.py
src/features/: houses.feature
src/features/steps/: house.py
src/models/: __init__.py  base.py  house.py  tokens.py  users.py
src/repositories/: base.py  mysql_repositories.py  pg_repositories.py  repositories.py  users.py
src/repositories/mysql/: repositories.py
src/routers/: __init__.py  house.py  user.py  users.py
src/schemas/: base.py  house.py  users.py
src/services/: house_service.py  houses.py  streams.py  tools.py  user.py  user_service.py  users.py
src/tests/: conftest.py  test_house.py
src/tests/houses/: conftest.py  test_house.py
src/tests/streams/: test_streams.py
src/tests/users/: conftest.py  test_routes.py  test_users.py
src/utils/: exceptions.py  unitofwork.py
