[tool.poetry]
name = "house_on_map"
version = "0.1.0"
description = "Test for some employer"
authors = ["Sergey Guzun <ser.guzun19@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.95.1"
pydantic = "1.10.7"
starlette = "0.26.1"
uvicorn = "0.21.1"
alembic = "1.10.3"
python-dotenv = "1.0.0"
psycopg2-binary = "^2.9.4"
asyncpg = "^0.27.0"
sqlalchemy = "^2.0.10"
email-validator = "^2.1.0.post1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pyjwt = "^2.8.0"
python-multipart = "^0.0.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.1"
pytest = "^7.2.2"
black = "^23.3.0"
isort = "^5.12.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
httpx = "0.26"
pytest-env = "^1.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "/src/tests",
]

[tool.black]
line_length = 80

[tool.isort]
line_length = 80
profile = "black"
known_first_party = ["api", "infrastructure", "domain"]

[tool.pytest_env]
POSTGRES_USER = "user"
POSTGRES_PASSWORD = "pass"
#POSTGRES_SERVER = "db"
POSTGRES_SERVER = "localhost"
POSTGRES_PORT = "5432"
POSTGRES_DB = "dbname"

SECRET_KEY = "9d7f2b24ecd99d829d0da407f53eb1b645ab44aa69fd3bcfd9415252bda935f9"